--- a/specific_speed.html
+++ b/specific_speed.html
@@ -30,9 +30,9 @@
 			Pump Speed <em>(rpm)</em><br>
 			<input name='pump_rated_speed' value=1780 data-vd-gt><br>
 			<label id=lbl_flow>Flow</label>
-			<input name='flow' value=2000 data-vd-gt><br>
+			<input name='flow' data-vd-gt><br>
 			<label id=lbl_hd>Head</label>
-			<input name='head' value=277 data-vd-gt><br>
+			<input name='head' data-vd-gt><br>
 			<button id=plot_btn class=prime onclick='plot()'>PLOT</button>
 		</div>
 		<div id=plot>
@@ -48,16 +48,18 @@
 <script>//# sourceURL=*pump_eff
 
 	function plot() {
-		let lblTxt = 'U.S.', m = 1;
+		let lblTxt = 'U.S.', m = 1, fu = 'gpm';
 		if (unit(DIST) == 'm') {
 			lblTxt = 'metric';
 			m = 3472 / 4033;
+			fu = 'm^3/hr';// flow unit
 		} 
-		const ss = nm('pump_rated_speed').val() * Math.sqrt(nm('flow').val()) 
-			/ Math.pow(nm('head').val(),.75);
-		function ec(x) {
+		const ss = nm('pump_rated_speed').val() * Math.sqrt( // specific speed
+			cvt(nm('flow').val(),FLOW,fu) )
+			/ Math.pow(nm('head').val(),.75) ;
+		function ec(x) { // efficiency correction
 			return api('achievableEfficiency',{
-				specific_speed: x * m,
+				specific_speed: x * m,// convert to u.s. for api
 			});
 		}
 		$('#ss').text(rnd(ss).toLocaleString());
@@ -93,7 +95,10 @@
 
 	setupVd();
 	
-	$('#lbl_flow').append(em(unit(DIST) == 'ft' ? 'gpm' : 'm^3/hr'));
+	setVal(nm('flow'),rnd(cvt(2000,FLOW,unit(FLOW),'gpm')));
+	setVal(nm('head'),rnd(cvt(277,DIST,unit(DIST),'ft')));
+	
+	$('#lbl_flow').append(em(unit(FLOW)));
 	$('#lbl_hd').append(em(unit(DIST)));	
 	
 </script>
