--- a/units.html
+++ b/units.html
@@ -120,7 +120,9 @@
 		chg(FLOW, Curve.plot, [0,2]);
 		chg(DIST, Curve.plot, [1,3]);
 		chg(POWER,MotorPerf,'motor_rated_power');
-		
+		chg(FLOW,SpecSpeed,'flow');
+		chg(DIST,SpecSpeed,'head');
+
 		chg(FLOW,UnitExample,0);
 		chg(POWER,UnitExample,1);
 		chg(DIST,UnitExample,2);
