--- a/nema.html
+++ b/nema.html
@@ -37,5 +37,5 @@ Efficiency Class
 		setData(Nema);
 		saveProp('nema',Nema);
 	});
-	//nmAll().first().change();
+	nmAll().first().change();
 </script>
