--- a/units.html
+++ b/units.html
@@ -122,6 +122,7 @@
 		chg(POWER,MotorPerf,'motor_rated_power');
 		chg(FLOW,SpecSpeed,'flow');
 		chg(DIST,SpecSpeed,'head');
+		chg(POWER,Nema,'motor_rated_power');
 
 		chg(FLOW,UnitExample,0);
 		chg(POWER,UnitExample,1);
