--- a/curve.html
+++ b/curve.html
@@ -132,7 +132,7 @@
 		$('#K').text(rnd(k,6));
 
 		setupPlot('FLOW RATE','HEAD');
-		curve(x => hS+k*Math.pow(x,1.9));				
+		curve(x => hS+k*Math.pow(x,C));				
 	}
 
 // init 
