--- a/conditions.html
+++ b/conditions.html
@@ -6,7 +6,7 @@
 
 /* tbl (list) */
 
-	#cond td>* {
+	#cond td > * {
 		display: block;
 	}
 	#cond tr:first-child {
@@ -32,7 +32,7 @@
 			<td><button onclick='cp(this)'><i class="fa fa-plus"></i></button></td>
 		</tr>
 		<tr>
-			<td><input type="checkbox" checked onclick='chkAll(this)'></input></td>
+			<td><input type="checkbox" onclick='chkAll(this)'></input></td>
 		</tr>
 	</table>
 	<p>
