--- a/grid.html
+++ b/grid.html
@@ -157,7 +157,7 @@
 		<td>
 			<div>Full-load Current<em>(A)</em></div>
 		</td>
-		<td><input name='motor_rated_flc'> <button onclick='estFLC(this)' data-vd-gt>EST</button></td>
+		<td><input name='motor_rated_flc' data-vd-gt> <button onclick='estFLC(this)'>EST</button></td>
 	</tr>
 	<tr>
 		<td>
@@ -173,7 +173,7 @@
 		<td>
 			<div>Operating Fraction <em>(%)</em></div>
 		</td>
-		<td><input name='fraction' data-vd-gt></td>
+		<td><input name='fraction' data-vd-gt='0.1-100'></td>
 	</tr>
 	<tr>
 		<td>
