--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 			function vdGt(e,min=1,max=Number.MAX_VALUE) {// validate 
 				let v = $(e).val();
 				if(Number(v) >= min && Number(v) <= max)  {
-					e.defaultValue = $(e).val();
+					e.defaultValue = v;
 				} else if (e.defaultValue >= min) {
 					$(e).val(e.defaultValue);          
 				} else {
