--- a/headtool.html
+++ b/headtool.html
@@ -49,10 +49,10 @@
 	<tr>
 		<td>Pipe inner diameter</td>
 		<td>						
-			<input name=Ds data-vd-gt=.1>
+			<input name=Ds data-vd-rng=.1>
 		</td>
 		<td>
-			<input name=Dd data-vd-gt=.1>
+			<input name=Dd data-vd-rng=.1>
 		</td>
 	</tr>
 	<tr class="sucTank">
@@ -60,7 +60,7 @@
 			Tank gas overpressure
 		</td>
 		<td>
-			<input name=Pg_s data-vd-gt=0><strong>Pg</strong>
+			<input name=Pg_s data-vd-rng=0><strong>Pg</strong>
 		</td>
 	</tr>
 	<tr class="sucTank">
@@ -68,38 +68,38 @@
 			Tank fluid surface elevation
 		</td>
 		<td>
-			<input name=Ztnk_s data-vd-gt=0><strong>Zs</strong>
+			<input name=Ztnk_s data-vd-rng=0><strong>Zs</strong>
 		</td>
 	</tr>	
 	<tr>
 		<td>Gauge pressure</td>
 		<td>
 			<div class=sucGauge>
-				<input name=Ps data-vd-gt=0><strong>Ps</strong>
+				<input name=Ps data-vd-rng=0><strong>Ps</strong>
 			</div>									
 		</td>
 		<td>						
-			<input name=Pd data-vd-gt=0><strong>Pd</strong>
+			<input name=Pd data-vd-rng=0><strong>Pd</strong>
 		</td>
 	</tr>
 	<tr>
 		<td>Gauge elevation</td>
 		<td>
 			<div class=sucGauge>
-				<input name=Zs data-vd-gt=0><strong>Zs</strong>
+				<input name=Zs data-vd-rng=0><strong>Zs</strong>
 			</div>
 		</td>
 		<td>			
-			<input name=Zd data-vd-gt=0><strong>Zd</strong>
+			<input name=Zd data-vd-rng=0><strong>Zd</strong>
 		</td>
 	</tr>
 	<tr>
 		<td>Line loss coefficients</td>
 		<td>
-			<input name=Ks data-vd-gt=0><strong>Ks</strong>
+			<input name=Ks data-vd-rng=0><strong>Ks</strong>
 		</td>
 		<td>			
-			<input name=Kd data-vd-gt=0><strong>Kd</strong>
+			<input name=Kd data-vd-rng=0><strong>Kd</strong>
 		</td>
 	</tr>
 	<tr><td>&nbsp;</td></tr>
