--- a/nema.html
+++ b/nema.html
@@ -18,9 +18,9 @@
 	<label><input name=line type=radio value=1> 60</label>
 </div>
 <span id='lblMRP'>Motor Rated Power</span>
-<div><input name='motor_rated_power' data-vd-gt></div>
+<div><input name='motor_rated_power' data-vd-rng></div>
 Motor Rated Speed <em>(rpm)</em>
-<div><input name='motor_rated_speed' data-vd-gt></div>
+<div><input name='motor_rated_speed' data-vd-rng></div>
 Efficiency Class
 <label><input name='efficiency_class' type=radio value=0> Standard</label>
 <label><input name='efficiency_class' type=radio value=1> Energy</label>
