--- a/specific_speed.html
+++ b/specific_speed.html
@@ -28,11 +28,11 @@
 			<select name='pump_style'>
 			</select><br>
 			Pump Speed <em>(rpm)</em><br>
-			<input name='pump_rated_speed' data-vd-gt><br>
+			<input name='pump_rated_speed' data-vd-rng><br>
 			<label id=lbl_flow>Flow</label>
-			<input name='flow' data-vd-gt><br>
+			<input name='flow' data-vd-rng><br>
 			<label id=lbl_hd>Head</label>
-			<input name='head' data-vd-gt><br>
+			<input name='head' data-vd-rng><br>
 			<button id=plot_btn class=prime onclick='plot()'>PLOT</button>
 		</div>
 		<div id=plot>
