--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 	td:first-child {
 		min-width: 4rem;
 	}
-</style><input id=yo>
+</style>
 <p>
 The Pumping System Assessment Tool was developed by the Department of Energy's BestPractices Program to assist in preliminary assessments of how efficiently pumping systems are operating.
 </p> 
